--- a/TesteVTBSolutionsUm/wwwroot/index.html
+++ b/TesteVTBSolutionsUm/wwwroot/index.html
@@ -7,8 +7,11 @@
     <title>TesteVTBSolutionsUm</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/igniteui.blazor/material.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="TesteVTBSolutionsUm.styles.css" rel="stylesheet" />
+    <script src="_content/MatBlazor/dist/matBlazor.js"></script>
+    <link href="_content/MatBlazor/dist/matBlazor.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -20,6 +23,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_framework/blazor.server.js"></script>
 </body>
 
 </html>
