--- a/TesteVTBSolutionsUm/wwwroot/index.html
+++ b/TesteVTBSolutionsUm/wwwroot/index.html
@@ -15,11 +15,11 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app">Carregando...</div>
 
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        Um erro não esperado ocorreu.
+        <a href="" class="reload">Atualizar</a>
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
